# robofish_gazebo_sim

./: CMakeLists.txt  README.md  package.xml  talker.cpp
config/: joint_names_fish_assembly.yaml
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: simple_test.pc
devel/lib/simple_test/: listener  talker
devel/share/simple_test/cmake/: simple_testConfig.cmake
launch/: gazebo.launch
meshes/: tail.STL
src/simple_test/: package.xml
src/simple_test/launch/: display.launch  gazebo.launch  main_empty.launch
src/simple_test/meshes/: base_link.STL  hinge.STL
src/simple_test/rviz/: urdf.rviz
src/simple_test/urdf/: fish.csv  fish.sdf  fish.urdf  fish_assembly.csv
urdf/: fish_assembly.urdf
worlds/: create.world
